<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linear_post_delete_image_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_dialog_background">

        <TextView
            android:id="@+id/text_post_delete_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm_delete_image_for_post_edit"
            android:textColor="@color/neutral_900"
            android:textSize="16sp"
            android:fontFamily="@font/pretendard_bold"/>

        <TextView
            android:id="@+id/text_post_delete_image_notice_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/confirm_delete_image_for_post_edit_description"
            android:textColor="@color/neutral_700"
            android:textSize="15sp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/linear_post_delete_image_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/text_btn_post_delete_image_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:textColor="@color/neutral_600"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_bold"
                android:layout_weight="1"
                android:paddingVertical="11dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"
                android:background="@drawable/shape_btn_round12_neutral100"/>

            <TextView
                android:id="@+id/text_btn_post_delete_image_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_agree_delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_bold"
                android:layout_weight="1"
                android:paddingVertical="11dp"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:background="@drawable/shape_btn_round12_primary"/>


        </LinearLayout>

    </LinearLayout>

</layout>