<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostEditFragment">

    <data>
        <variable
            name="vm"
            type="com.swmarastro.mykkumi.feature.post.PostEditViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/header_post_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:layout_alignParentTop="true">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_close"
                android:scaleType="fitXY"
                android:layout_marginLeft="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/text_post_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_edit_title"
                android:textSize="18sp"
                android:textColor="@color/neutral_900"
                android:fontFamily="@font/pretendard_semibold"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <com.swmarastro.mykkumi.common_ui.custom.CustomScrollView
            android:id="@+id/scroll_edit_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_post_edit">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/relative_select_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_DD"
                    android:layout_alignParentTop="true">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewpager_post_edit_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>

                </RelativeLayout>

                <HorizontalScrollView
                    android:id="@+id/scroll_select_post_image_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relative_select_post_image"
                    android:scrollbars="none"
                    android:fillViewport="true">

                    <LinearLayout
                        android:id="@+id/linear_select_post_image_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerview_select_post_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                tools:listitem="@layout/item_select_post_image"
                                android:overScrollMode="never"
                                android:nestedScrollingEnabled="false"/>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/btn_add_post_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:text="추가"
                            android:gravity="center"
                            android:background="@color/gray_DD"
                            android:layout_margin="5dp"/>

                    </LinearLayout>

                </HorizontalScrollView>

                <Button
                    android:id="@+id/btn_add_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="핀 추가"
                    android:padding="2dp"
                    android:background="@color/gray_DD"
                    android:layout_below="@id/scroll_select_post_image_list"
                    android:layout_alignParentLeft="true"/>

                <EditText
                    android:id="@+id/edittext_input_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:hint="@string/placeholder_input_post_content"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_86"
                    android:textSize="15sp"
                    android:gravity="top"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:layout_below="@id/btn_add_pin"
                    android:background="@color/gray_DD"/>

            </RelativeLayout>

        </com.swmarastro.mykkumi.common_ui.custom.CustomScrollView>

        <TextView
            android:id="@+id/text_upload_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_post"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</layout>